# Styrochstall

./: .gitignore  README.md  agent.md  analyze_data.py  analyze_simulation_outputs.py  build_markov_chain.py  build_travel_time_cache.py  calibration.ipynb  compare_gbfs_maps.py  detect_rebalancing.py  graph_components_map.py  graph_dependency_map.py  graph_diagnostics.py  lab_report.md  plot_od_graph.py  plot_od_map.py  plot_station_activity_map.py  plot_station_status_timemap.py  plot_stockout_probability_map.py  populate_data.py  prepare_simulation_data.py  pyproject.toml  run_monte_carlo_simulation.py  simulate_markov_paths.py  trip_explorer.ipynb  update_travel_time_cache.py
.github/workflows/: populate-data.yml
configs/: calibration.yaml  simulation.yaml
data/models/: lambda.parquet  maps_lambda.parquet  observed_edge_list_for_viz.parquet  observed_od_matrix.parquet  observed_od_probability.parquet  observed_od_tidy.parquet  observed_travel_time.parquet  od_flow_matrix.parquet  od_matrix.parquet  od_probability_matrix.parquet  travel_time.parquet
notebooks/: policy_scenarios.ipynb
reports/: analysis_summary.md  gbfs_vs_maps.html  graph_components_map.html  markov_simulated_trips.parquet  monte_carlo_diagnostics.md  observed_od_map.html  observed_od_map_new.html  od_graph.html  rebalancing_routes.html  station_activity_departures.html  station_dependency_map.html  stockout_probability_map.html  stockout_probability_map_refill.html
styrstell/: __init__.py  cli.py  config.py
tests/: test_config.py  test_od_estimator.py  test_trip_inference.py
(+4522 files in other folders)
