[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "styrstell"
version = "0.1.0"
description = "End-to-end analysis and simulation stack for Gothenburg's Styr & Ställ bike share"
authors = [{name = "Alexander Jonsson"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.24",
    "simpy>=4.0",
    "pydantic>=2.5",
    "requests>=2.31",
    "typer>=0.9",
    "pyarrow>=14.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scipy>=1.11",
    "PyYAML>=6.0",
    "folium>=0.15",
    "plotly>=5.18",
    "imageio>=2.31"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "mypy>=1.7",
    "types-requests",
    "types-pytz",
    "ipykernel"
]

[project.scripts]
styrstell-calibrate = "styrstell.cli:run_calibration"
styrstell-simulate = "styrstell.cli:run_simulation"
styrstell-infer-trips = "styrstell.cli:run_infer_trips"
styrstell-infer-maps-trips = "styrstell.cli:run_infer_maps_trips"
styrstell-observed-od = "styrstell.cli:run_observed_od"

[tool.setuptools.packages.find]
include = ["styrstell"]
